inou/prp/tests/errors/is_operator_removed.prp
/*
:name: is_operator_removed
:type: error
:error: syntax error: unexpected
:help: does not parse
*/
// The `is` / `!is` nominal type operator was removed (task 1f-is_typename):
// `a is b` is no longer valid syntax (the tree-sitter-pyrope grammar dropped
// the `is` infix operator, so it parses as an unexpected token). Structural
// `does` / `equals` / `case` are the only type-comparison operators.

type Foo = (a:u8 = 0)
const x:Foo = (a=1)
cassert(x is Foo)
